--- a/LibraryApi/appsettings.json
+++ b/LibraryApi/appsettings.json
@@ -11,5 +11,13 @@
     "LibraryDatabase": "server=.\\sqlexpress;database=library;integrated security=true"
   },
 
-  "redisHost":  "localhost"
+  "redisHost": "localhost",
+
+  "rabbit": {
+    "UserName": "guest",
+    "Password": "guest",
+    "HostName": "localhost",
+    "Port": "5672",
+    "Vhost":  "/"
+  }
 }
